apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:sonarr.lab.emc2.build
    traefik.port: '8989'
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:sonarr.lab.emc2.build
        traefik.port: '8989'
      labels:
        app: sonarr
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: IfNotPresent
        name: sonarr
        ports:
        - containerPort: 8989
        resources:
          requests:
            cpu: 25m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 768Mi
        volumeMounts:
        - mountPath: /config
          name: sonarr-config
        - mountPath: /downloads
          name: media-library
      hostname: sonarr
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
