apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
  - name: sonarr
    port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
