apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: sonarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sonarr.lab.emc2.build
    secretName: sonarr-letsencrypt-tls
  rules:
  - host: sonarr.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 8989
        path: /
        pathType: Prefix
